Fix smooth scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -706,6 +706,7 @@ strong {
 		height: 100%;
 		background-color: #404040;
 		overflow: scroll;
+		-webkit-overflow-scrolling: touch;
 		
 	}
 	
@@ -719,8 +720,6 @@ strong {
 		margin-top: 6%;
 		margin-left: 8%;
 		margin-right: 8%;
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
 		
 	}
 	
@@ -743,6 +742,7 @@ strong {
 		height: 100%;
 		background-color: #404040;
 		overflow: scroll;
+		-webkit-overflow-scrolling: touch;
 		
 	}
 	
@@ -756,8 +756,6 @@ strong {
 		margin-top: 6%;
 		margin-left: 8%;
 		margin-right: 8%;
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
 		
 	}
 	
@@ -780,6 +778,7 @@ strong {
 		height: 100%;
 		background-color: #404040;
 		overflow: scroll;
+		-webkit-overflow-scrolling: touch;
 		
 	}
 	
@@ -793,8 +792,6 @@ strong {
 		margin-top: 6%;
 		margin-left: 8%;
 		margin-right: 8%;
-		overflow-y: scroll;
-		-webkit-overflow-scrolling: touch;
 		
 	}
 	
